Start marketmaker as a Service